--- a/public/html/footer.html
+++ b/public/html/footer.html
@@ -1,4 +1,4 @@
-<div class="w3-container w3-padding w3-center w3-purple w3-xlarge">
+<div class="w3-container w3-padding w3-center w3-teal w3-xlarge">
   <a href="#"><i class="fa fa-facebook-official"></i></a>
   <a href="#"><i class="fa fa-pinterest-p"></i></a>
   <a href="#"><i class="fa fa-twitter"></i></a>
