--- a/public/html/nav.html
+++ b/public/html/nav.html
@@ -1,4 +1,4 @@
-<ul class="w3-navbar w3-purple ">
+<ul class="w3-navbar w3-teal ">
   <li title="خانه" class="w3-right">
     <a href="#/">
       <i class="fa fa-home" style="font-size: 24px;"></i>
