commit to continue in faraadid!

--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
       <plate-t1></plate-t1>
       <radio-difficulty></radio-difficulty>
       <radio-plate-type></radio-plate-type>
-      <checkbox-ignore></checkbox-ignore>
+      <checkbox-annotatable></checkbox-annotatable>
 
       <div class="arrow-keys">
         <i ng-click="previous();" id="previous" class="w3-hover-text-red w3-text-orange fa fa-arrow-circle-left"></i>
@@ -64,12 +64,13 @@
     <script type="text/javascript" src="./js/controllers/appController.js"></script>
 
     <!-- services -->
+    <script type="text/javascript" src="./js/services/getInfo.js"></script>
 
     <!-- directives -->
     <script type="text/javascript" src="./js/directives/plateT1.js"></script>
     <script type="text/javascript" src="./js/directives/radioDifficulty.js"></script>
     <script type="text/javascript" src="./js/directives/radioPlateType.js"></script>
-    <script type="text/javascript" src="./js/directives/checkboxIgnore.js"></script>
+    <script type="text/javascript" src="./js/directives/checkboxAnnotatable.js"></script>
 
   </body>
 </html>
