complete first level of client-server interaction.

--- a/public/index.html
+++ b/public/index.html
@@ -65,6 +65,7 @@
 
     <!-- services -->
     <script type="text/javascript" src="./js/services/getInfo.js"></script>
+    <script type="text/javascript" src="./js/services/updateInfo.js"></script>
 
     <!-- directives -->
     <script type="text/javascript" src="./js/directives/plateT1.js"></script>
