--- a/public/js/directives/radioDifficulty.html
+++ b/public/js/directives/radioDifficulty.html
@@ -1,8 +1,8 @@
 <div class="w3-section w3-center">
   <span>میزان سختی: </span>
-  <input class="w3-radio" type="radio" name="difficulty" value="normal" checked>
-  <label class="w3-validate">معمولی</label>
-
-  <input class="w3-radio" type="radio" name="difficulty" value="hard">
-  <label class="w3-validate">سخت</label>
+  <div style="display: inline;" ng-repeat="difficulty in difficultiesInfo">
+    <input class="w3-radio" type="radio" name="difficulty" ng-checked="$index === 0"
+      ng-model="currentPlate.plate.difficulty" ng-value="difficulty.name" >
+    <label class="w3-validate">{{ difficulty.name }}</label>
+  </div>
 </div>
