change mysql model to mango!

--- a/public/js/directives/checkboxAnnotatable.html
+++ b/public/js/directives/checkboxAnnotatable.html
@@ -1,4 +1,4 @@
 <div class="w3-center">
-  <input ng-checked="currentPlate.plate.isAnnotatable" ng-model="currentPlate.plate.isAnnotatable" class="w3-check" type="checkbox">
+  <input ng-checked="currentPlate.isAnnotatable" ng-model="currentPlate.isAnnotatable" class="w3-check" type="checkbox">
   <label class="w3-validate">میتونی برچسب بزنی؟</label>
 </div>
