--- a/public/js/directives/radioPlateType.html
+++ b/public/js/directives/radioPlateType.html
@@ -2,7 +2,7 @@
   <span>نوع پلاک: </span>
   <div style="display: inline;" ng-repeat="type in typesInfo">
     <input class="w3-radio" type="radio" name="type" ng-checked="$index === 0"
-      ng-model="currentPlate.plate.type" ng-value="type.name">
+      ng-model="currentPlate.type.name" ng-value="type.name">
     <label class="w3-validate">{{ type.name }}</label>
   </div>
 </div>
