--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,17 @@
     <section style="position: relative;" class="w3-section">
 
       <div style="direction: rtl; width: 50%; margin: auto;">
+        <div class="w3-center">
+          <input class="w3-radio" type="radio" name="plate-state" ng-checked="plateState === 'initial'"
+            ng-model="plateState" value="initial" >
+          <label class="w3-validate">فقط برچسب نخورده ها</label>
+          <input class="w3-radio" type="radio" name="plate-state" ng-checked="plateState === 'annotated'"
+            ng-model="plateState" value="annotated" >
+          <label class="w3-validate">فقط برچسب خورده ها</label>
+
+          <!-- <input type="checkbox" class="w3-check" ng-checked="plateState==='initial'" ng-model="plateState">
+          <label class="w3-validate">فقط برچسب نخورده ها</label> -->
+        </div>
         <p>
           <span><i style="position: relative; top: 8px;" class="w3-round-xlarge w3-green material-icons">add</i></span>
           <span>ابتدا کلید a را فشرده و سپس مستطیل را ترسیم نمایید.</span>
@@ -51,6 +62,9 @@
       </div>
 
 
+      <img ng-show="currentPlate.state=='annotated'" style="position: absolute; left:100px; top: 20px;" width="100" height="100" src="./assets/images/checked.jpg" alt="checked-badge" />
+
+
     </section>
 
     <footer>
@@ -73,5 +87,10 @@
     <script type="text/javascript" src="./js/directives/radioPlateType.js"></script>
     <script type="text/javascript" src="./js/directives/checkboxAnnotatable.js"></script>
 
+    <!-- socket.io -->
+    <script src="/socket.io/socket.io.js"></script>
+    <script type="text/javascript">
+      var socket = io();
+    </script>
   </body>
 </html>
