--- a/public/js/directives/checkboxAnnotatable.html
+++ b/public/js/directives/checkboxAnnotatable.html
@@ -1,4 +1,4 @@
 <div class="w3-center">
-  <input ng-checked="currentPlate.isAnnotatable" ng-model="currentPlate.isAnnotatable" class="w3-check" type="checkbox">
-  <label class="w3-validate">میتونی برچسب بزنی؟</label>
+  <input ng-checked="currentPlate.isAnnotatable === false" ng-model="currentPlate.isAnnotatable" class="w3-check" type="checkbox">
+  <label class="w3-validate">قابل برچسب زدن نیست</label>
 </div>
